# SemanticFolding

./: .gitignore  AGENTS.md  cmd.txt  pyproject.toml  test.py
brain_approaches/hipporag/: README.md  chunker.py  config.py  export_triples.py  load_dataset.py  load_to_memgraph.py  progress_tracker.py  test_models.py
config/: exec_state.yml  semantic_folding.yml
data/: corpus.txt  corpus_en_fr.txt  corpus_fr.txt  customtexts.txt  qa-sample.md  sample_queries.md
data/HippoRAG2/: OpenIE.md  ReadMe.md  datasets.md
data/Natural-Questions/: ReadME.md
data/corpus/: corpus.json  corpus_20.json  graphrag_rag_corpus.txt
data/quran/: README.md  dataset_infos.json  jsonl2csv.py  quran_ayahs.csv  quran_ayahs.txt  quran_ayahs_NE.txt  quran_ayahs_clean.txt  start.py
semantic_folding/: README.md  analyze_fingerprints.py  benchmarks.md  customtext_fingerprints.py  customtext_visualizer.py  customtext_visualizer_class.py  doc_fingerprints.py  doc_fingerprintsOnlyEnglish.py  doc_visualizer.py  fingerprints.md  lance_storage.py  lib.py  metrics.md  parameters_tuning.md  phrase_extractor.py  phrase_extractorOnlyEnglish.py  phrase_fingerprints.py  phrase_visualizer.py  query_processor.py  semantic_folder.py  semantic_space.py  sematic_space.md  term_context.md  term_context.py
v1_050130_050302/: cmd.txt  pyproject.toml
v1_050130_050302/brain_approaches/hipporag/: __init__.py  extract_triples.py  run_pipeline.py  scratchpad.md
v1_050130_050302/brain_approaches/semantic_folding/: HOW_TO_RUN.md  README.md  SCRATCHPAD.md  TEST_SCRATCHPAD.py  analyze_fingerprints.py  context-similarity.py  doc_fingerprints.py  fingerprints.md  lib.md  lib.py  phrase_extractor.md  phrase_extractor.py  phrase_extractor_Multilingual.py  phrase_extractor_drB.py  phrase_fingerprints.py  query_processing.md  query_processing.py  scratchpad.py  semantic_folder.py  semantic_space.py  term_context.py  test.py  test_corpus.json  visualize_binary_fingerprints.py  visualize_semantic_fingerprints.py
v1_050130_050302/brain_approaches/semantic_folding/notebooks/: Document_representation.ipynb  Semantic_Space_Construction.ipynb  UMAP_2.ipynb  Umap_3.ipynb  Umap_fingerprint.ipynb
v1_050130_050302/config/: exec_state.yml  semantic_folding.yml
v1_050130_050302/data/: cleaned_corpus_11000.txt  cleaned_corpus_final1.txt  corpus100.txt  corpus_100.txt  curpus_100_qa.md  qa-sample.md
v1_050130_050302/data/HippoRAG2/: free-models.yml
v1_050130_050302/data/corpus/: corpus_20.txt
v1_050130_050302/data/quran/: gitattributes  quran_ayahs.txt  quran_ayahs_tail20ta.txt  quran_ayahs_tail764.txt
(+11 files in other folders)
