[project]
name = "knowledge-graph-builder"
version = "0.1.0"
description = "LangGraph-based multi-agent system for building knowledge graphs from text corpora"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "neo4j>=5.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "tiktoken>=0.7.0",
    "nltk>=3.8.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.3",
    "pyyaml>=6.0.0",
    "scipy>=1.16.3",
    "numpy>=2.4.0",
    "plotly>=6.5.2",
    "matplotlib>=3.10.8",
    "spacy>=3.8.11",
    "networkx>=3.6.1",
    "seaborn>=0.13.2",
    "lancedb>=0.29.2",
    "pyarrow>=23.0.0",
    "tui>=1.1.1",
    "questionary>=2.1.1",
    "scikit-learn>=1.8.0",
    "umap-learn>=0.5.11",
    "kaleido",
]

[[tool.uv.index]]
url = "https://mirror2.chabokan.net/pypi/simple"
default = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

nlp = [
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.2.0",
    # Optional (faster NN for large corpora): install faiss-cpu or faiss-gpu as appropriate
    "faiss-cpu>=1.7.3; platform_system!='Windows'",
    "spacy>=3.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

